--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.29",
+    "@supabase/supabase-js": "^2.39.0",
+    "next": "15.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.0",
